--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Citas
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content padding>
+
+<!-- Este código está comentado por si tengo que utilizarlo más adelante -->
+
+<!-- <ion-content padding>
   <ion-item >
     <ion-label>Nombre</ion-label>
     <ion-input [(ngModel)]="citaEditando.nombre"></ion-input>
@@ -27,28 +23,96 @@
     <ion-input [(ngModel)]="citaEditando.corte"></ion-input>
   </ion-item>
 
-  <!-- botones -->
-  <ion-button (click)="clicBotonInsertar()">Añadir cita</ion-button>
-  <ion-button (click)="clicBotonBorrar()">Borrar cita</ion-button>
-  <ion-button (click)="clicBotonModificar()">Modificar tarea</ion-button>
+  <ion-button (click)="clicBotonInsertar()">Añadir cita</ion-button> -->
+
+ 
+
 
 <!-- ver lista -->
   <br>
   <br>
-  <h1>Mis citas</h1>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>
+        Mis Citas
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content padding class="background">
   <ion-list>
-    <ion-item *ngFor="let documentCita of arrayColeccionCitas" (click)="selecCita(documentCita)">
-      <ion-grid>
-        <ion-row>
-          <h2>{{documentCita.data.nombre}}</h2>
-        </ion-row>
-        <ion-row>
-          <p>Fecha: {{documentCita.data.dia}}</p>
-        </ion-row>
-        <ion-row>
-          <p>Tipo de corte: {{documentCita.data.corte}}</p>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
+    <ng-container *ngFor="let documentCita of arrayColeccionCitas"   >
+      <ion-col size-xl="2" size-lg="2" size-md="4" size-sm="6" size-xs="12">      
+          <ion-card (click)="selecCita(documentCita)">
+          <ion-card-content >
+          <p class="nombre">{{documentCita.data.nombre}}</p>
+          <p class="fecha">Fecha: {{documentCita.data.dia}}</p>
+        </ion-card-content>
+        </ion-card>
+        </ion-col>
+      </ng-container>      
   </ion-list>
+  <ion-fab (click)="clicBotonMas()" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="warning">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button> 
+  </ion-fab>
 </ion-content>
+
+<ion-footer>
+<ion-item-divider>
+
+  <span class="spanHome">
+    <ion-icon class="home" (click)="clicBotonHome()" name="home-outline"></ion-icon>
+    <span class="home">Home</span>
+
+  </span>
+
+  <span class="spanInfo">
+    <ion-icon class="info" (click)="clicBotonInfo()" name="information-circle-outline"></ion-icon>
+    <span class="info">Info</span>
+
+  </span>
+
+  <span class="spanMap">
+    <ion-icon class="map" (click)="clicBotonMap()" name="map-outline"></ion-icon>
+    <span class="map">Map</span>
+
+  </span>
+
+</ion-item-divider>
+
+</ion-footer>
+  <!-- <div class="iconHome" style="display: flex">
+    <ion-icon class="home" (click)="clicBotonHome()" name="home-outline"></ion-icon>
+    <div class="txHome" >Home</div>
+  </div>
+
+  <div class="iconInfo" style="display: flex">
+    <ion-icon class="info" (click)="clicBotonInfo()" name="information-circle-outline"></ion-icon>
+    <div class="txInfo">Info</div>
+  </div>
+
+  <div class="iconMap" style="display: flex">
+    <ion-icon class="map" (click)="clicBotonMap()" name="map-outline"></ion-icon>
+    <div class="txMap">Map</div>
+</div> -->
+
+
+    <!-- <span>
+    <ion-icon class="home" (click)="clicBotonHome()" name="home-outline"></ion-icon>
+    <p class="home">Home</p>
+
+  </span>
+
+  <span>
+    <ion-icon class="info" (click)="clicBotonInfo()" name="information-circle-outline"></ion-icon>
+    <p class="info">Info</p>
+
+  </span>
+
+  
+
+  <span>
+    <ion-icon class="map" (click)="clicBotonMap()" name="map-outline"></ion-icon>
+    <p class="map">Map</p>
+  </span> -->
